# UiABotMini_Development

./: .gitignore  README.md
Arduino/: IMU_ROS_MSG_CAL.ino  readme.md
Videos/: readme.md
ros2_ws/: mapper_params_localization.yaml  my_map_serial.data
ros2_ws/Maps/: my_second_map.pgm  my_second_map.yaml  my_second_map_serial.data  test_map.pgm  test_map.yaml
ros2_ws/Simulink/: ClosedLoopControl.slx  readme.md
ros2_ws/src/jetson_sub_node/: CMakeLists.txt  package.xml
ros2_ws/src/jetson_sub_node/src/: base_tf.py  inv_kin.py  py_ser_node.py  wheel_odom_publish.py
ros2_ws/src/mpu9250_source/: CMakeLists.txt  package.xml
ros2_ws/src/mpu9250_source/src/: MPU_Node.py  tf_imu_broadcaster.py
ros2_ws/src/rplidar_ros/launch/: view_rplidar_a1_launch.py
ros2_ws/src/rplidar_ros/rviz/: rplidar_ros.rviz
ros2_ws/src/urdf_visual/: CMakeLists.txt  package.xml
ros2_ws/src/urdf_visual/config/: mapper_params_online_async.yaml  nav2_params.yaml  new_view_slam.rviz  rplidar_ros.rviz  view_urdf.rviz
ros2_ws/src/urdf_visual/description/: imu.xacro  lidar.xacro  robot.urdf.xacro  robot_frame.xacro  robot_frame_thomas.xacro  robot_macros.xacro
ros2_ws/src/urdf_visual/launch/: urdf.launch.py
